Update recordm and reportm API with the new operation names
