# src/api/recordm/model/index.ts
@@ -13,8 +13,8 @@ export * from './instance';
 export * from './instance-field';
 export * from './integration-add-message';
 export * from './integration-delete-message';
+export * from './integration-stats';
 export * from './integration-update-message';
-export * from './stats';
 export * from './task';
 export * from './task-assignee';
 export * from './update-definition-request';
