# src/api/recordm/model/integration-stats.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * RecordM API
+ * The RecordM REST API<br/><br/> **Note**: To  use the \'Try it out\' buttons, you must be [logged in](/).
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface IntegrationStats
+ */
+export interface IntegrationStats {
+    /**
+     * 
+     * @type {number}
+     * @memberof IntegrationStats
+     */
+    'updated'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof IntegrationStats
+     */
+    'deleted'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof IntegrationStats
+     */
+    'forbidden'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof IntegrationStats
+     */
+    'error'?: number;
+}
+
